# mac-ai-doctor

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  validation.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: index.html  launch-kit.md  validation.md
docs/plans/: implementation.md
src/mac_ai_doctor/: __init__.py  cli.py  estimate.py  metadata.py  models.py  sharing.py  system.py  tui.py  webapp.py
tests/: test_core.py
tests/fixtures/: llama-8b.json
