[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mac-ai-doctor"
version = "0.1.2"
description = "Transparent unified-memory fit estimates for local AI models"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "barvhaim", email = "barvhaim@gmail.com"}]
keywords = ["apple-silicon", "llm", "unified-memory", "gguf", "mlx", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Utilities",
]
dependencies = ["typer>=0.12,<1", "rich>=13,<15", "httpx>=0.27,<1"]

[project.urls]
Homepage = "https://github.com/barvhaim/mac-ai-doctor"
Repository = "https://github.com/barvhaim/mac-ai-doctor"
Issues = "https://github.com/barvhaim/mac-ai-doctor/issues"

[dependency-groups]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "mypy>=1.11"]

[project.scripts]
maid = "mac_ai_doctor.cli:app"
mac-ai-doctor = "mac_ai_doctor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_ai_doctor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["mac_ai_doctor"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
